2011-09-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCopt.c,
	  support/regression/bug3407632.c:
	  Fixed bug #3407632.

2011-09-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/linksrc/aslink.h: added pcb & rterr, modified lkglist
	* sdas/linksrc/lkarea.c (find_empty_space, allocate_space): changed warnings
	* sdas/linksrc/lkdata.c: added pcb & rterr
	* sdas/linksrc/lkeval.c (eval, expr, term): no signed arithmetic,
	  (term): accept closing quotes	
	* sdas/linksrc/lklist.c: sync with ASxxxx 5
	* sdas/linksrc/lkmain.c (link_main): reset a_bytes and hilo to defaults 2,0
	  fixes bug 3305824	
	* sdas/linksrc/lkrloc.c (relr): set default pcb

2011-09-09 Borut Razem <borut.razem AT gmail.com>

	* support/cpp/md5.h:
	  included stdint.h for uintptr_t declaration

2011-09-08 Borut Razem <borut.razem AT gmail.com>

	* support/cpp/md5.h:
	  fixed WIN64 warning: cast from pointer to integer of different size

2011-09-07 Borut Razem <borut.razem AT gmail.com>

	* support/cpp/version.c: updated version to 4.6.1

2011-09-06 Borut Razem <borut.razem AT gmail.com>

	* debugger/mcs51/sdcdb.h, src/SDCCsystem.c, src/pic14/glue.c:
	  fixed WIN64 warnings: cast from pointer to integer of different size
	* src/SDCCsystem.c: fixed WIN64 TRUE and FALSE redefinition
	* src/SDCCglobal.c: fixed stack overflow

2011-09-06 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCralloc.hpp:
	  Connect unconnected live-ranges instead of just spilling.

2011-09-06 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Minor cleanup from the stack-compact branch.

2011-09-05 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/sincoshf.c: fixed bug 3326853

2011-09-05 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/tests/bug1723128.c: fixed bug 3403038

2011-09-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.h,
	  support/regression/tests/bug3404101.c: